Fix Progress Updates to work with page transitions Impl. Cleaner page transitions Change reader view overlay z-index Reader view overlay fixes

--- a/crates/frontend/scss/components/_reader.scss
+++ b/crates/frontend/scss/components/_reader.scss
@@ -100,7 +100,7 @@
 		overflow: hidden;
 
 		> .view-overlay {
-			z-index: 101;
+			z-index: 99;
 			position: absolute;
 			top: 0;
 			left: 0;
